Implement ReactJS frontend dashboard, Spring Cloud Gateway CORS policies, and path-filtered GitHub Actions CI/CD workflows